--- a/themes/theme-flip-investimentos/pages/email-confirmation.htm
+++ b/themes/theme-flip-investimentos/pages/email-confirmation.htm
@@ -1,6 +1,8 @@
-url = "/email/confirmation/:user?"
+url = "/email/confirmation/:user?/:code?"
 ==
-{% set name = "Jéssica Alves Esteves" %}
+
+{{ dump(this.param) }}
+
 <div>
     <table width="100%">
         <tbody>
@@ -31,7 +33,7 @@ url = "/email/confirmation/:user?"
                                                     <tr>
                                                         <td>
                                                             <h2 style="margin: 0px 0px 30px; font-family: Open Sans, Helvetica Neue, Helvetica, Helvetica, Arial, sans-serif; font-weight: 300; line-height: 1.5; font-size: 24px; color: rgb(41, 70, 97);">
-                                                            Olá {{ name }}, seja bem vindo(a). 
+                                                            Olá {% if this.param.user is not empty %} {{ this.param.user }}{% else %} Fliper{% endif %}, seja bem vindo(a). 
                                                             <br>Que tal confirmarmos seu e-mail?
                                                             </h2>
                                                             <p style="margin:0; margin-bottom:30px; color:#294661; font-family:'Open Sans','Helvetica Neue','Helvetica',Helvetica,Arial,sans-serif; font-size:16px; font-weight:300">
@@ -47,7 +49,7 @@ url = "/email/confirmation/:user?"
                                                                             <table cellpadding="0" cellspacing="0">
                                                                                 <tbody>
                                                                                     <tr>
-                                                                                    <a target="_blank" href="{{'email/confirmation'|page}}" style="padding: 20px 25px; line-height: 69px; height: 69px; min-height: 69px; transition: .2s cubic-bezier(.55,0,.1,1); border: 0; outline: 0; min-width: 160px; user-select: none; letter-spacing: .03125rem; text-decoration: none; text-transform: uppercase; text-align: center; font-weight: 700; cursor: pointer; font-family: Roboto,Helvetica,Arial,sans-serif; color: #fff; border-radius: 100px; background-color: #00b563;">
+                                                                                    <a target="_blank" href="/api/vi/active/acount/{{ code }}" style="padding: 20px 25px; line-height: 69px; height: 69px; min-height: 69px; transition: .2s cubic-bezier(.55,0,.1,1); border: 0; outline: 0; min-width: 160px; user-select: none; letter-spacing: .03125rem; text-decoration: none; text-transform: uppercase; text-align: center; font-weight: 700; cursor: pointer; font-family: Roboto,Helvetica,Arial,sans-serif; color: #fff; border-radius: 100px; background-color: #00b563;">
                                                                                         Confirmar e-mail</a>
                                                                                     </tr>
                                                                                 </tbody>
