--- a/themes/theme-flip-investimentos/pages/email-confirmation.htm
+++ b/themes/theme-flip-investimentos/pages/email-confirmation.htm
@@ -1,7 +1,5 @@
-url = "/email/confirmation/:user?/:code?"
+url = "/email/confirmation/:code?/:user?"
 ==
-
-{{ dump(this.param) }}
 
 <div>
     <table width="100%">
