--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -4,17 +4,17 @@ layout = "default"
 description = "Flip Investimentos, que tal investir com uma assessoria personalizada e aumentar seus ganhos:"
 canonical_url = "https://flipinvestimentos.com.br/"
 
-
+[banners]
+bannerLocation = 2;
 ==
 <section>
 <div class="swiper-container slider-home">
     <div class="swiper-wrapper">
-        {% for slide in range(0,3) %}
+        {% for banner in banners.banners %}
         <div class="swiper-slide">
             <a href="#">
-                <div 
-                    class="bg bg-shadow bg-shadow-inverse banner" 
-                    style="background-image: url(../assets/images/banners/banner-home.jpg)">
+                <div class="bg bg-shadow bg-shadow-inverse banner" 
+                    style="background-image: url({{ banner.image_desktop.getPath() }})">
                 </div>
             </a>
         </div>
