--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -5,7 +5,7 @@ description = "Flip Investimentos, que tal investir com uma assessoria personali
 canonical_url = "https://flipinvestimentos.com.br/"
 
 [banners]
-bannerLocation = 2;
+bannerLocation = 2
 ==
 <section>
 <div class="swiper-container slider-home">
