--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -14,7 +14,7 @@ bannerLocation = 2
         <div class="swiper-slide">
             <a href="#">
                 <div class="bg bg-shadow bg-shadow-inverse banner" 
-                    style="background-image: url({{ banner.image_desktop.getPath() }})">
+                    style="background-image: url({{ banner.banner_desktop.getPath() }})">
                 </div>
             </a>
         </div>
