--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -7,6 +7,8 @@ canonical_url = "https://flipinvestimentos.com.br/"
 [banners]
 bannerLocation = 2
 ==
+
+{{ dump(banners) }}
 <section>
 <div class="swiper-container slider-home">
     <div class="swiper-wrapper">
