Adjustment to persist the page selected

--- a/plugins/siapp/website/controllers/content/index.htm
+++ b/plugins/siapp/website/controllers/content/index.htm
@@ -7,7 +7,7 @@
 	         <select class="form-control custom-select" name="section" data-request="onSaveCurrentSection">
 	         	<option value="" >Selecione uma página</option>
                  <?php foreach($sections as $s){ ?>
-	            	<option value="<?= $s ?>" <?php if($currentSection == $s ){ ?>selected="selected"<?php } ?>><?= $s ?></option>
+	            	<option value="<?= $s ?>" <?php if(\Session::get('currentWbsiteSection') == $s ){ ?>selected="selected"<?php } ?>><?= $s ?></option>
 	            <?php } ?>
 	            
 	        </select>
