--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -39,8 +39,8 @@ bannerLocation = 2
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-12">
-            <h2 class="title title-lg title-border-bottom color-black mb-30 pb-30">Soluções 
-                <span class="color-yellow-200">inteligentes</span> para sua liberdade financeira.
+            <h2 class="title title-lg title-border-bottom color-black mb-30 pb-30">A
+                <span class="color-yellow-200">a</span> {{ "para sua liberdade financeira."|contenttext('SITE | Home', false, "Título da primeeira sessão") }}
             </h2>
             <p class="text text-lg">Nossa equipe possui formação no mercado financeiro, expertise na área de investimentos, 
                 know-haw de mercado, além conhecimentos técnicos práticos para te auxiliar a conquistar seus objetivos 
