--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -26,13 +26,13 @@ bannerLocation = 2
 </section>
 <section class="home-companys bg-black">
 <a class="px-20 btn-opacity" href="#" target="_blank">
-    <img width="120"class="lozad" data-src="../assets/images/logos/apimec.svg" alt="logo-apimec">
+    <img width="120"class="lozad" data-src="{{ 'assets/images/logos/apimec.svg'|theme }}" alt="logo-apimec">
 </a>
 <a class="px-20 btn-opacity"href="#" target="_blank">
-    <img width="160" class="lozad" data-src="../assets/images/logos/b3.svg" alt="logo-b3">
+    <img width="160" class="lozad" data-src="{{ 'assets/images/logos/b3.svg'|theme }}" alt="logo-b3">
 </a>
 <a class="px-20 btn-opacity" href="#" target="_blank">
-    <img width="160" class="lozad" data-src="../assets/images/logos/febraban.svg" alt="logo-febraban">
+    <img width="160" class="lozad" data-src="{{ 'assets/images/logos/febraban.svg'|theme }}" alt="logo-febraban">
 </a>
 </section>
 <section class="section-home bg-white">
