--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -51,7 +51,7 @@ bannerLocation = 2
 
             </h2>
             <p class="text text-lg">
-                {{ "Nossa equipe possui"|contenttext('SITE | Home', true, "Título da primeira sessão") }}
+                {{ "Nossa equipe possui"|contenttext('SITE | Home', true, "Descrição da primeira sessão") }}
             </p>
         </div>
     </div>
@@ -61,9 +61,12 @@ bannerLocation = 2
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-12">
-            <h2 class="title title-lg title-border-bottom color-white mb-30 pb-30">Diferencias</h2>
-            <p class="text text-lg color-white">Como consultoria independente, trabalhamos para melhor atendimento e 
-                rentabilidade de seus investimentos sem qualquer viés com alguma instituição financeira.
+            <h2 class="title title-lg title-border-bottom color-white mb-30 pb-30">
+            {{ "Diferencias"|contenttext('SITE | Home', true, "Título da segubda sessão") }}
+            </h2>
+            <p class="text text-lg color-white">
+                {{ "Como consultoria independente, trabalhamos para melhor atendimento e rentabilidade de seus investimentos sem qualquer viés com alguma instituição financeira."|contenttext('SITE | Home', true, "Descrição da segunda sessão") }}
+            
             </p>
             <p class="text text-lg color-white">Acompanhamento, direcionamento e suporte  para suas dúvidas.</p>
             <p class="text text-lg color-white">Conhecimento e expertise prática.</p>
