--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -62,14 +62,13 @@ bannerLocation = 2
     <div class="row">
         <div class="col-lg-8 col-12">
             <h2 class="title title-lg title-border-bottom color-white mb-30 pb-30">
-            {{ "Diferencias"|contenttext('SITE | Home', true, "Título da segubda sessão") }}
+            {{ "Diferencias"|contenttext('SITE | Home', true, "Título da segunda sessão") }}
             </h2>
             <p class="text text-lg color-white">
-                {{ "Como consultoria independente, trabalhamos para melhor atendimento e rentabilidade de seus investimentos sem qualquer viés com alguma instituição financeira."|contenttext('SITE | Home', true, "Descrição da segunda sessão") }}
-            
+                {{ "Como consultoria independente, trabalhamos para melhor atendimento e rentabilidade de seus investimentos sem qualquer viés com alguma instituição financeira."|contenttext('SITE | Home', true, "Descrição da segunda sessão - 1") }}
             </p>
-            <p class="text text-lg color-white">Acompanhamento, direcionamento e suporte  para suas dúvidas.</p>
-            <p class="text text-lg color-white">Conhecimento e expertise prática.</p>
+            <p class="text text-lg color-white">{{ "Acompanhamento, direcionamento e suporte  para suas dúvidas."|contenttext('SITE | Home', true, "Descrição da segunda sessão - 2") }}</p>
+            <p class="text text-lg color-white">{{ "Conhecimento e expertise prática."|contenttext('SITE | Home', true, "Descrição da segunda sessão - 3") }}</p>
         </div>
     </div>
 </div>
@@ -78,11 +77,12 @@ bannerLocation = 2
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-12">
-            <h2 class="title title-lg title-border-bottom color-black mb-30 pb-30">Consultoria financeira</h2>
-            <p class="text text-lg color-black">Ajudamos você com seu planejamento financeiro, mostrando as soluções que 
-                vão fazer a diferença no seu futuro e auxiliando na aplicação na prática. Além disso, vamos te educar 
-                financeiramente mostrando o porque aqueles investimentos se encaixam em seus objetivos e por que certas 
-                decisões serão tomadas.</p>
+            <h2 class="title title-lg title-border-bottom color-black mb-30 pb-30">
+                {{ "Consultoria financeira"|contenttext('SITE | Home', true, "Título da terciera sessão") }}
+            </h2>
+            <p class="text text-lg color-black">
+                {{ "Ajudamos você com seu planejamento financeiro, mostrando as soluções que vão fazer a diferença no seu futuro e auxiliando na aplicação na prática. Além disso, vamos te educar financeiramente mostrando o porque aqueles investimentos se encaixam em seus objetivos e por que certas decisões serão tomadas."|contenttext('SITE | Home', true, "Descrição da terceira sessão") }}
+                </p>
         </div>
     </div>
     
@@ -92,10 +92,11 @@ bannerLocation = 2
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-12">
-                <h2 class="title title-lg title-border-bottom color-black mb-30 pb-30">Treinamento</h2>
-                <p class="text text-lg color-black">Oferecemos treinamento e desenvolvimento de pessoas dentro das empresas, 
-                    mostrando como os colaboradores podem se programar financeiramente com seus salários, diminuindo o 
-                    stress e aumentando a produtividade. Quer saber como funciona? Entre em contato com a nossa equipe.
+                <h2 class="title title-lg title-border-bottom color-black mb-30 pb-30">
+                    {{ "Treinamento"|contenttext('SITE | Home', true, "Título da quarta sessão") }}
+                </h2>
+                <p class="text text-lg color-black">
+                    {{ "Oferecemos treinamento e desenvolvimento de pessoas dentro das empresas, mostrando como os colaboradores podem se programar financeiramente com seus salários, diminuindo o stress e aumentando a produtividade. Quer saber como funciona? Entre em contato com a nossa equipe."|contenttext('SITE | Home', true, "Descrição da quarta sessão") }}
                 </p>
             </div>
         </div>
