Add location name on banners

--- a/themes/theme-flip-investimentos/pages/home.htm
+++ b/themes/theme-flip-investimentos/pages/home.htm
@@ -1,7 +1,7 @@
 title = "Flip Investimentos, que tal investir com a melhor acessoria do Brasil"
 url = "/"
 layout = "default"
-description = "Flip Investimentos, que tal investir com uma assessoria personalizada e aumentar seus ganhos:"
+description = "Flip Investimentos, que tal investir com uma assessoria personalizada e aumentar seus ganhos"
 canonical_url = "https://flipinvestimentos.com.br/"
 
 [banners]
